Bug 282672 - MarbleWidget::regionSelected(QList<double>) returns wrong coordinates
Summary: MarbleWidget::regionSelected(QList<double>) returns wrong coordinates
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 1.3 (KDE 4.8)
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-24 12:08 UTC by Bernhard Beschow
Modified: 2011-09-24 12:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Beschow 2011-09-24 12:08:46 UTC
Version:           unspecified (using Devel) 
OS:                Linux

Citing Anton Chernov:

I found that very strange values are returned in QList<double>. It
have to be coordiantes of selected region but it is not so. Some times
values are "similar" to true but usually not. I have already tried to
change projection to Mercator the same problem - coordinates are
incorrect.

Reproducible: Didn't try

Steps to Reproduce:
Connect to signal MarbleWidget::regionSelected(QList<double>).

Actual Results:  
strange values are returned in QList<double>

Expected Results:  
coordiantes of selected region
Comment 1 Bernhard Beschow 2011-09-24 12:36:55 UTC
Git commit c1571d199409870520032676f98e0902a62804e5 by Bernhard Beschow.
Committed on 24/09/2011 at 13:48.
Pushed by beschow into branch 'master'.

MarbleWidgetInputHandler: don't convert rubber coordinated from global

* fixes coordinates passed in signal MarbleWidget::regionSelected(QList<double>)

Thanks to Anton Chernov for the patch.

BUG: 282672
CCMAIL: chernov.anton.mail@gmail.com

M  +1    -3    src/lib/MarbleWidgetInputHandler.cpp

http://commits.kde.org/marble/c1571d199409870520032676f98e0902a62804e5