MarbleWidgetInputHandler: don't convert rubber coordinated from global

* fixes coordinates passed in signal MarbleWidget::regionSelected(QList<double>)

Thanks to Anton Chernov for the patch.

BUG: 282672
CCMAIL: chernov.anton.mail@gmail.com